move colony screen positions to avoid overlap

--- a/game/src/ui/overlay/Colony.module.scss
+++ b/game/src/ui/overlay/Colony.module.scss
@@ -21,7 +21,7 @@
   padding: 10px;
   box-shadow: 0 0 5px 5px rgba(240, 233, 201, 0.85);
 
-  max-width: 28vw;
+  max-width: 33vw;
 
   pointer-events: none;
 }
